# rust-grpc_vs_rest

./: Cargo.toml
src/: client.rs  client_rest.rs  server.rs  server_rest.rs
