[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[[bin]] # Bin to run the HelloWorld REST server
name = "helloworld-server-rest"
path = "src/server_rest.rs"

[[bin]] # Bin to run the HelloWorld REST client
name = "helloworld-client-rest"
path = "src/client_rest.rs"


[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
actix-web = "3"
actix-rt = "2.1.0"
reqwest = "0.11.10"


[build-dependencies]
tonic-build = "0.6"